src/css/details.css
main {
    margin: 4rem 0;
    padding: 0 3.2rem;
}


section {
    width: 100%;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
}

.RS-contact {
    gap: 3.2rem;   
}

@media (max-width: 730px) {
    section {
        max-width: 55rem;
    }
}


@media (min-width: 730px) {
    section {
        max-width: 80rem;
    }
}


@media (min-width: 1280px) {
    section {
        max-width: 111rem;
    }
}


/* 
    ====================

    ----- Sections -----

    ====================
*/


/* 
    ----- Hero Image -----
*/



.P-hero {
    margin-bottom: 4rem;
    width: 100%;
}



/* 
    ----- Intro -----
*/

.P-container {
    border-top: 1px solid #979797;
    border-bottom: 1px solid #979797;
    display: flex;
    flex-direction: column;
    gap: 2.4rem;
    padding: 2.4rem 0;
    
}

.P-container .secondaryButton {
    max-width: 18rem;
    max-height: 4.8rem;
}



/* 
    ----- Project Description -----
*/



.P-description {
    margin: 4.8rem 0 4rem;
}

.P-description .imageContainer {
    margin: 4rem 0 6.4rem;
} 

.P-description .imageContainer picture:nth-child(1) {
    margin-bottom: 3.2rem;
}



@media (min-width: 730px) and (max-width: 1280px) {
    .P-container {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 4.2rem 6rem 4.8rem;
    }

    .P-container .title {
        grid-column: 1 / 2;
        grid-row: 1 / 2;
    }


    .P-container .tecnologies {
        grid-column: 1 / 2;
        grid-row: 2 / 3;
    }


    .P-container .secondaryButton {
        grid-column: 1 / 2;
        grid-row: 3 / 4;
    }


    
}



@media (min-width: 1280px) {

    .P-hero {
        margin-bottom: 12rem;
    }

    .P-intro {
        display: grid;
        grid-template-columns: auto auto;
        grid-template-rows: auto;
        gap: 12.5rem;
    }

    .P-intro .P-container {
        grid-column: 1 / 2;
        max-height: 50rem;
        max-width: 36rem;
        margin-top: 0;
    }

    .P-intro .P-description {
        grid-column: 2 / 3;
        grid-row: 1 / 2;
        max-width: 64rem;
        margin: 0;
    } 
}

